updated to support multiple release types
Signed-off-by: David Sims <simsdj82@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,10 +6,15 @@ on:
       tag:
         description: "Git tag (leave empty for dry run)"
         required: false
-      prerelease:
-        description: "Is this a pre-release?"
+      release_type:
+        description: "Release Type"
         required: true
-        type: boolean
+        type: choice
+        options:
+          - latest
+          - backport
+          - prerelease
+        default: 'latest'
 
 jobs:
   release:
@@ -61,7 +66,7 @@ jobs:
       - name: Check if release is allowed or not
         id: validate_release
         run: |
-          if [[ "${{ inputs.prerelease }}" == "false" && "${{ steps.validate_tag.outputs.IS_TAG_ON_MAIN }}" == "true" ]]; then
+          if [[ "${ inputs.release_type }}" != "prerelease" && "${{ steps.validate_tag.outputs.IS_TAG_ON_MAIN }}" == "true" ]]; then
             echo "ERROR: Creating stable release from a tag on main is not allowed."
             exit 1
           fi
@@ -71,7 +76,7 @@ jobs:
         run: |
           PUSH_ARCHIVE=$(
             [[ 
-              "${{ inputs.prerelease }}" == "true" && 
+              "${{ inputs.release_type }}" == "prerelease" && 
               ("${{ steps.validate_tag.outputs.IS_TAG_ON_MAIN }}" == "true" || 
               "${{ steps.validate_tag.outputs.IS_TAG_ON_VERSION }}" == "true") 
             ]] && echo false || echo true
@@ -129,7 +134,7 @@ jobs:
           # goreleaser won't sign the packages.
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.SNAPCRAFT_STORE_TOKEN }}
-          PRERELEASE_RELEASE: ${{ inputs.prerelease }}
+          RELEASE_TYPE: ${{ inputs.release_type }}
 
       - name: Remove GPG key
         if: always()
