--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,14 +7,14 @@ on:
         description: "Git tag (leave empty for dry run)"
         required: false
       release_type:
-        description: "Release Type"
+        description: "Release type"
         required: true
         type: choice
         options:
           - latest
           - backport
           - prerelease
-        default: 'latest'
+        default: "latest"
 
 jobs:
   release:
