--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -27,11 +27,11 @@ builds:
 
     goos:
       - linux
-      - windows
-      - darwin
-      - freebsd
-      - openbsd
-      - solaris
+      #- windows
+      #- darwin
+      #- freebsd
+      #- openbsd
+      #- solaris
 
     goarch:
       - "386"
