--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -208,16 +208,10 @@ snapcrafts:
       providers as well as custom in-house solutions.
     base: core22
     channel_templates:
-      - >- 
-        {{- if eq .Env.RELEASE_TYPE "prerelease" }}
-          "{{ .Major }}.{{ .Minor }}/edge"
-        {{- end }}
-        {{- if eq .Env.RELEASE_TYPE "backport" }}
-          "{{ .Major }}.{{ .Minor }}/stable"
-        {{- end }}
-        {{- if eq .Env.RELEASE_TYPE "latest" }}
-          latest/stable
-        {{- end }}
+      - >-
+        {{- if eq .Env.RELEASE_TYPE "prerelease" }}"{{ .Major }}.{{ .Minor }}/edge"{{- end }}
+        {{- if eq .Env.RELEASE_TYPE "backport" }}"{{ .Major }}.{{ .Minor }}/stable"{{- end }}
+        {{- if eq .Env.RELEASE_TYPE "latest" }}latest/stable{{- end }}
     grade: '{{ if eq .Env.RELEASE_TYPE "prerelease" }}devel{{ else }}stable{{ end }}'
     confinement: classic
     license: MPL-2.0
