--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -200,14 +200,13 @@ nfpms:
 
 snapcrafts:
   - name: opentofu
-    publish: true
+    publish: '{{ if eq .Env.RELEASE_FLAG_LATEST "true" }}true{{ else }}false{{ end }}'
     summary: OpenTofu lets you declaratively manage your cloud infrastructure.
     description: |
       OpenTofu is an OSS tool for building, changing, and versioning infrastructure
       safely and efficiently. OpenTofu can manage existing and popular service
       providers as well as custom in-house solutions.
     base: core22
-    disable: '{{ if ne .Env.RELEASE_FLAG_LATEST "true" }}true{{ else }}false{{ end }}'
     grade: '{{ if eq .Env.RELEASE_FLAG_PRERELEASE "true" }}devel{{ else }}stable{{ end }}'
     channel_templates:
       - '{{ if eq .Env.RELEASE_FLAG_PRERELEASE "true" }}latest/edge{{ else }}latest/stable{{ end }}'
