--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -200,7 +200,7 @@ nfpms:
 
 snapcrafts:
   - name: opentofu
-    publish: '{{ if eq .Env.RELEASE_FLAG_LATEST "true" }}true{{ else }}false{{ end }}'
+    publish: true
     summary: OpenTofu lets you declaratively manage your cloud infrastructure.
     description: |
       OpenTofu is an OSS tool for building, changing, and versioning infrastructure
