--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -206,16 +206,13 @@ snapcrafts:
       OpenTofu is an OSS tool for building, changing, and versioning infrastructure
       safely and efficiently. OpenTofu can manage existing and popular service
       providers as well as custom in-house solutions.
-    base: core22
-    grade: '{{ if eq .Env.RELEASE_FLAG_PRERELEASE "true" }}devel{{ else }}stable{{ end }}'
+    disable: '{{ if ne .Env.RELEASE_FLAG_LATEST "true" }}true{{ else }}false{{ end }}'
     channel_templates:
-      - >-
-        {{- if eq .Env.RELEASE_FLAG_LATEST "true" }}
-          {{- if eq .Env.RELEASE_FLAG_PRERELEASE "true" }}latest/edge{{- end }}
-          {{- if eq .Env.RELEASE_FLAG_PRERELEASE "false" }}latest/stable{{- end }}
-        {{- end }}
+      - '{{ if eq .Env.RELEASE_FLAG_PRERELEASE "true" }}latest/edge{{ else }}latest/stable{{ end }}'
+    grade: '{{ if eq .Env.RELEASE_FLAG_PRERELEASE "true" }}devel{{ else }}stable{{ end }}'
     confinement: classic
     license: MPL-2.0
+    base: core22
     apps:
       tofu:
         command: tofu
